found the cause of and fixed a mystery 5 pixel gap. added headers to my skill section. removed graphql logo until i actually learn it. page seems pretty much ready, just need to come to a final decision on colors and fonts as well as pictures to use. Will need to implement database later to hold project information

--- a/src/styles/_globals.scss
+++ b/src/styles/_globals.scss
@@ -96,7 +96,7 @@ h2 {
 	family: 'Oswald', sans-serif;
 	size: 24px;
   }
-	margin: 5px auto;
+	// margin: 5px auto;
 
 }
 
