--- a/src/styles/_slick.scss
+++ b/src/styles/_slick.scss
@@ -117,8 +117,8 @@
     border: 1px solid transparent;
 }
 .slick-arrow {
-    height: 120px;
-    margin-top: 30px;
+    height: 100%;
+    margin-top: 25px;
     background:$white;
 }
 .slick-arrow.slick-hidden {
