--- a/src/styles/components/_contact.scss
+++ b/src/styles/components/_contact.scss
@@ -3,6 +3,7 @@
   // top: -125px;
   background: $light;
   h2 {
+    padding: 10px 0;
     text-align: center;
   }
 
