--- a/src/styles/components/_projectsCarousel.scss
+++ b/src/styles/components/_projectsCarousel.scss
@@ -1,7 +1,7 @@
 .sliderSection {
   h2 {
     margin: 0;
-    padding: 10px;
+    padding: 20px;
     text-align: center;
     font-weight: 0;
   }
