--- a/src/styles/components/_skills.scss
+++ b/src/styles/components/_skills.scss
@@ -1,28 +1,34 @@
-.skillsPage{
-    // position: relative;
-    // top: -120px;
-    background: $light;
-	display: flex;
-	flex-direction: row;
-	flex-wrap: wrap;
-	justify-content: space-around;
-	align-items: center;
-	align-content: stretch;
+.skillsPage {
+  // position: relative;
+  // top: -120px;
+  background: $light;
+  h2 {
+    padding: 10px 0;
+    text-align: center;
+  }
 }
-.skillsList{
-    padding: 15px 0;
-	display: flex;
-	flex-direction: column;
-	flex-wrap: nowrap;
-	justify-content: flex-start;
-	align-items: center;
-	align-content: stretch;
-    img {
-        max-height: 150px;
-    } 
-    
-    p {
-        padding-top: 5px;
-        font-size: 18px;
-    }
+.skillsList {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  align-items: center;
+  align-content: stretch;
+}
+.skills {
+  padding: 15px 0;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: nowrap;
+  justify-content: flex-start;
+  align-items: center;
+  align-content: stretch;
+  img {
+    max-height: 150px;
+  }
+
+  p {
+    padding-top: 5px;
+    font-size: 18px;
+  }
 }
